frontend/cicd/dndn-frontend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    type: frontend
    version: blue
  name: dndn-frontend-blue
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      type: frontend
      version: blue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: frontend
        version: blue
    spec:
      containers:
      - image: seungwoo0128/dndn-frontend:2.42
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  conditions:
  - lastTransitionTime: "2026-05-07T15:35:04Z"
    lastUpdateTime: "2026-06-02T04:54:35Z"
    message: ReplicaSet "dndn-frontend-blue-f9674d9c6" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-06-02T04:55:06Z"
    lastUpdateTime: "2026-06-02T04:55:06Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 41
