frontend/cicd/dndn-frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    type: frontend
    version: green
  name: dndn-frontend-green
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      type: frontend
      version: green
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        type: frontend
        version: green
    spec:
      containers:
      - image: seungwoo0128/dndn-frontend:2.43
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-07T15:31:29Z"
    lastUpdateTime: "2026-06-02T06:46:36Z"
    message: ReplicaSet "dndn-frontend-green-fc9ff8f76" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-06-02T06:52:58Z"
    lastUpdateTime: "2026-06-02T06:52:58Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 43
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
