frontend/cicd/dndn-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-blue
  namespace: default
spec:
  clusterIP: 10.96.86.178
  clusterIPs:
  - 10.96.86.178
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    type: frontend
    version: blue
  sessionAffinity: None
  type: ClusterIP
  loadBalancer: {}
