frontend/cicd/dndn-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-green
  namespace: default
spec:
  clusterIP: 10.104.250.247
  clusterIPs:
  - 10.104.250.247
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    type: frontend
    version: green
  sessionAffinity: None
  type: ClusterIP
  loadBalancer: {}
