frontend/cicd/dndn-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: www.dndn24.kro.kr
    http:
      paths:
      - backend:
          service:
            name: frontend-service-green
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.dndn24.kro.kr
    secretName: dndn24-tls
  loadBalancer:
    ingress:
    - ip: 192.100.20.32
